<resources>
    <string name="app_name">lab_02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full name</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">menu_home</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>

    <string name="menu_title_category">Категорії</string>
    <string name="menu_item_home">Дім</string>
    <string name="menu_item_work">Робота</string>
    <string name="menu_item_hobby">Хобі</string>
    <string name="menu_item_school">Навчання</string>
    <string name="menu_title_account">Акаунт</string>
    <string name="menu_item_sync">Синхронізувати</string>
    <string name="menu_item_exit">Вихід</string>
</resources>