<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_title_category">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_item_home" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_work"
                    android:title="@string/menu_item_work" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_hobby"
                    android:title="@string/menu_item_hobby" />
                <item
                    android:id="@+id/nav_school"
                    android:icon="@drawable/ic_school"
                    android:title="@string/menu_item_school" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_title_account">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync"
                android:title="@string/menu_item_sync" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_item_exit" />
        </menu>
    </item>
</menu>